docs/book/samples/appc/order_alpha_check.out
error[formatting]: function declarations appear in alphabetical order: `play` before `zeta`
  --> order_alpha_check.kso:4:5
   4 | pub play = print "{zeta 1}"
           ^
