docs/book/samples/appc/order_alpha_check.kso
pub play = print "{zeta 1}"

fn zeta x
  x
